@@ -1,6 +1,8 @@
 1.1.3 (15.02.2013):
 
 * Added missing arguments to 'changed-progress' signal emission.
+* Fix bug preventing import after error.
+  Closes bug 155 (can't enter correct file name after incorrect file name)
 
 
 1.1.2 (10.02.2013):
